[QPlay3] fix language string and add -webkit-overflow-scroll touch

--- a/APP/QPlayV3.0/www/css/index.css
+++ b/APP/QPlayV3.0/www/css/index.css
@@ -911,14 +911,9 @@ input[type=radio]:checked + label {
 /*************************** widget ********************************/
 #viewMain3 .ui-content {
     padding: 0 !important;
-    /* overflow-y: scroll;
-    -webkit-overflow-scrolling: touch; */
-}
-
-/* #viewMain3 {
-    overflow-y: scroll !important;
+    /* overflow-y: scroll; */
     -webkit-overflow-scrolling: touch;
-} */
+}
 
 .carouselWidget {
     width: 100vw;
@@ -1013,6 +1008,7 @@ input[type=radio]:checked + label {
 /*************************** viewAppList ********************************/
 #viewAppList .ui-content {
     padding: 0 !important;
+    -webkit-overflow-scrolling: touch;
 }
 
 .download-title {
